# octodns-exoscale

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
octodns_exoscale/: __init__.py
test/: test_main.py
